--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   display: grid;
   height: 100vh;
   width: 100vw;
-  background: azure;
+  background: rgb(63, 63, 63);
 }
 
 /* Container */
@@ -105,7 +105,7 @@ body {
 
 .why li:nth-of-type(1) {
   margin-bottom: 1.2rem;
-  font-size:1.2rem ;
+  font-size: 1.2rem;
   color: hsl(204, 43%, 93%);
   font-weight: 700;
 }
@@ -113,4 +113,42 @@ body {
 .why li {
   list-style: none;
   line-height: 1.3;
+}
+
+@media screen and (max-width: 1280px) {
+  .main_container {
+    height: 100%;
+  }
+
+  .container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: grid;
+    width: 90%;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  .join {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-end: 2;
+  }
+
+  .pricing {
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .why {
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+
+  .container > div:nth-of-type(2) {
+    border-bottom-left-radius: 0px;
+  }
+
+  .container > div:nth-of-type(3) {
+    border-bottom-left-radius: 5px;
+  }
 }
