--- a/style.css
+++ b/style.css
@@ -116,40 +116,27 @@ body {
   line-height: 1.3;
 }
 
-@media screen and (max-width: 1280px) {
-  .main_container {
-    height: 100%;
-  }
+/* Footer Section  */
 
-  .container {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    display: grid;
-    width: 90%;
-    grid-template-rows: 1fr 1fr 1fr;
-  }
+footer {
+  text-align: center;
+}
 
-  .join {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-end: 2;
-  }
+footer p {
+  background-color: hsl(71, 73%, 54%);
+  border-radius: 25px;
+  display: inline;
+  padding: 0.5rem;
+}
 
-  .pricing {
-    grid-row-start: 2;
-    grid-row-end: 3;
-  }
+footer a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+}
 
-  .why {
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-
-  .container > div:nth-of-type(2) {
-    border-bottom-left-radius: 0px;
-  }
-
-  .container > div:nth-of-type(3) {
-    border-bottom-left-radius: 5px;
-  }
+footer a:hover,
+footer a:active {
+  color: hsl(179, 62%, 43%);
+  transition: all 0.3s ease-in-out;
 }
